[workspace]
members = [
    'node',
    'node/cli',
    'node/service',

    'primitives/bholdus',

    'runtime/chain-extension',
    'runtime/ulas',
    'runtime/phoenix',

    'pallets/currencies',
    # 'pallets/dex',
    'pallets/support',
    'pallets/support/nft',
    'pallets/tokens',
    'pallets/non-fungible-token',
    # 'pallets/bridge/bsc',
    'pallets/bridge/native-transfer',
    'pallets/template',

    'precompiles/template',
    'precompiles/utils',
]

exclude = [
    'smart-contracts/tokens',
	'smart-contracts/lixi',
]

[profile.release]
panic = 'unwind'

