[workspace]
members = [
    'node',
    'node/cli',
    'node/service',

    'primitives/common',

    'runtime/chain-extension',
    'runtime/ulas',
    'runtime/phoenix',

    'pallets/currencies',
    'pallets/support',
    'pallets/support/nft',
    'pallets/tokens',
    'pallets/non-fungible-token',
    'pallets/bridge/native-transfer',
    'pallets/template',

    'precompiles/template',
    'precompiles/utils',
]

exclude = [
    'smart-contracts/tokens',
	'smart-contracts/lixi',
]

[profile.release]
panic = 'unwind'

