[package]
authors = ['Bholdus <https://github.com/bholdus>']
build = 'build.rs'
description = 'Real world decentralized finance.'
edition = '2018'
homepage = 'https://bholdus.com'
name = 'bholdus'
repository = 'https://github.com/bholdus/bholdus-chain/'
version = "1.0.15"

[[bin]]
name = 'bholdus'
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-11'
version = '3.0.0'

[dependencies]
futures = { version = "0.3.9", features = ["compat"] }
hex = '0.4.3'

bholdus-cli = { path = 'cli' }
bholdus-service = { path = 'service' }

[features]
default = []
runtime-benchmarks = [
    "bholdus-cli/runtime-benchmarks",
    "bholdus-service/runtime-benchmarks",
]
with-ulas-runtime = [
    "bholdus-service/with-ulas-runtime",
    "bholdus-cli/with-ulas-runtime",
]
with-cygnus-runtime = [
    "bholdus-service/with-cygnus-runtime",
    "bholdus-cli/with-cygnus-runtime",
]
with-phoenix-runtime = [
    "bholdus-service/with-phoenix-runtime",
    "bholdus-cli/with-phoenix-runtime",
]
