[package]
authors = ["Bholdus <dung.lam@hawking.network>"]
edition = "2018"
homepage = "https://bholdus.com"
license = "Apache-2.0"
name = "bholdus-primitives"
repository = "https://github.com/bholdus/bholdus-chain/"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { default-features = false, version = "3.0.0", git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
sp-runtime = { default-features = false, version = "3.0.0", git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }

[dev-dependencies]
pretty_assertions = "0.6.1"
sp-serializer = { version = "3.0.0", git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }

[features]
default = ["std"]
std = ["sp-core/std", "sp-runtime/std"]
