[package]
authors = ["Bholdus <dung.lam@hawking.network>"]
edition = "2018"
homepage = "https://bholdus.com"
license = "Apache-2.0"
name = "bholdus-primitives"
repository = "https://github.com/bholdus/bholdus-chain/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

#[dependencies]
# sp-core = { default-features = false, version = "3.0.0", git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
# sp-runtime = { default-features = false, version = "3.0.0", git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
[dependencies.sp-core]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'
# branch = 'bholdus-monthly-2021-07'
# path = '../sub-primitives/core'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

#[dev-dependencies]
# pretty_assertions = "0.6.1"
# sp-serializer = { version = "3.0.0", git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }

[dependencies.pretty_assertions]
optional = true
version = '0.6.1'

[dev-dependencies.sp-serializer]
default-features = false
git = 'https://github.com/bholdus/substrate.git'
branch = 'bholdus-monthly-2021-07'
version = '3.0.0'

[features]
default = ["std"]
std = ["serde", "codec/std","sp-core/std", "sp-runtime/std", "sp-std/std"]

