[package]
name = "bholdus-rpc"
version = "4.0.0-dev"
authors = ["Nhi Tran <nhi.tran@hawking.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
codec = { package = "parity-scale-codec", version = "2.2.0" }

sp-api = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sp-keystore = { version = '0.10.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sp-consensus = { version = '0.10.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sp-block-builder = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sp-blockchain = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sp-runtime = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-transaction-pool = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-transaction-pool-api = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-client-api = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-rpc = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-rpc-api = { version = '0.10.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-chain-spec = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-keystore = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
substrate-frame-rpc-system = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-consensus = { version = '0.10.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-consensus-epochs = { version = '0.10.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-finality-grandpa = { version = '0.10.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-finality-grandpa-rpc = { version = '0.10.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
sc-consensus-uncles = { version = '0.10.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
beefy-gadget = { version = '4.0.0-dev', git = "https://github.com/bholdus/substrate", branch = "master" }
beefy-gadget-rpc = { version = '4.0.0-dev', git = "https://github.com/bholdus/substrate", branch = "master" }

pallet-transaction-payment-rpc = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
pallet-im-online = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
pallet-contracts = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
pallet-contracts-rpc = { version = '4.0.0-dev', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}
pallet-mmr-rpc = { version = '3.0.0', git = 'https://github.com/bholdus/substrate.git', branch = 'master'}

bholdus-primitives = { version = '4.0.0-dev', path = '../primitives/bholdus/'}

